<resources>
    <string name="app_name">ProJACK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_proj_name">Enter Project Name</string>
    <string name="hint_desc">Enter Project Description</string>
    <string name="hint_type">Project type</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="hint_submit">Add Project</string>

    <string-array name="dropdown_proj_type">
        <item>Web Application</item>
        <item>Desktop Application</item>
        <item>Mobile Application</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="developers">Developed by: Krishnarao, Vishal &amp; Zaheen</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_phone">Capture</string>
</resources>
