<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_proj_name" />
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/input_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:minLines="4"
            android:gravity="left|top"
            android:hint="@string/hint_desc" />
    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/input_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#f9f9f9"
        android:hint="@string/hint_type"
        android:entries="@array/dropdown_proj_type"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_start_date"
                android:id="@+id/startDate"
                android:onClick="setDate"
                android:layout_weight="0.5"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_end_date"
                android:id="@+id/endDate"
                android:onClick="setDate"
                android:layout_weight="0.5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
        </LinearLayout>

    <Button

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_submit"
        android:id="@+id/btnSubmit"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        />
</LinearLayout>